Crash on quit when only an extension's custom window is open. b=429215 r=josh sr=vlad a=vlad